--- a/style.css
+++ b/style.css
@@ -71,5 +71,6 @@ footer {
 /* provides formatting for my name within the footer*/
 .footer-myname {
   font-family: Tahoma, Geneva, sans-serif;
+  font-size: 20px;
   margin-bottom: -10px;
 }
